@@ -1,5 +1,11 @@
 2023-05-21 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* src/mos6502/gen.c,
+	  src/mos6502/main.c:
+	  mos6502 _BitInt support up to 8 bits.
+
+2023-05-21 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* src/hc08/gen.c
 	  src/hc08/main.c,
 	  doc/sdccman.lyx:
